[package]
name = "core_generator"
version = "0.1.0"
authors = ["Diogo Almirante <diogo.almirante@miniclip.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0"
syn = { version = "1.0.81", features = ["full"] }
